--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <title>Oh my food</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3f6c1d8c3a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!--LOADER-->
+    
     <!--header-->
     <header>
         <div class="logo">
@@ -72,7 +77,9 @@
                             </a>
                             <div class="heart">
                                 <i class="far fa-heart"></i>
-                                <i class="fas fa-heart"></i>
+                                <div class="fullheart">
+                                    <i class="fas fa-heart"></i>
+                                </div>
                             </div>
                         </figcaption>
                         <div class="new">Nouveau</div>
@@ -90,7 +97,9 @@
                             </a>
                             <div class="heart">
                                 <i class="far fa-heart"></i>
-                                <i class="fas fa-heart"></i>
+                                <div class="fullheart">
+                                    <i class="fas fa-heart"></i>
+                                </div>
                             </div>
 
                         </figcaption>
@@ -109,7 +118,9 @@
                             </a>
                             <div class="heart">
                                 <i class="far fa-heart"></i>
-                                <i class="fas fa-heart"></i>
+                                <div class="fullheart">
+                                    <i class="fas fa-heart"></i>
+                                </div>
                             </div>
                         </figcaption>
                     </figure>
@@ -126,7 +137,9 @@
                             </a>
                             <div class="heart">
                                 <i class="far fa-heart"></i>
-                                <i class="fas fa-heart"></i>
+                                <div class="fullheart">
+                                    <i class="fas fa-heart"></i>
+                                </div>
                             </div>
                         </figcaption>
                     </figure>
