--- a/note.html
+++ b/note.html
@@ -8,6 +8,9 @@
     <title>La note enchantée</title>
     <link rel="stylesheet" href="css/style2.css">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3f6c1d8c3a.js" crossorigin="anonymous"></script>
 </head>
 
@@ -34,7 +37,9 @@
                     <h1>La note enchantée</h1>
                     <div class="heart">
                         <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
+                        <div class="fullheart">
+                            <i class="fas fa-heart"></i>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -43,63 +48,67 @@
                     <p style="margin-bottom: 10px
                     ;">ENTRÉES</p>
                     <div class="line"></div>
-                    <a href="#" class="bloc-link2">
-                        <div class="choise">
-                            <div class="choix">
-                                <div class="text">
-                                    <h2>Ravioles de foie gras</h2>
-                                    <p>Accompagnés de leur crème à la truffe</p>
-                                </div>
-                                <div class="prix">25€</div>
+                    <div class="choise2">
+                        <div class="choix">
+                            <div class="text">
+                                <h2>Ravioles de foie gras</h2>
+                                <p>Accompagnés de leur crème à la truffe</p>
                             </div>
-                            <i class="fas fa-check-circle"></i>
-                    </a>
-                    <a href="#" class="bloc-link2">
+                            <div class="prix">25€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="choix2">
                             <div class="text">
                                 <h2>Caviar osciètre</h2>
                                 <p>Sur blini à la farine de blé noir</p>
                             </div>
                             <div class="prix">35€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="valide">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
-                    <a href="#" class="bloc-link2">
+
                         <div class="choix3">
                             <div class="text">
                                 <h2>Homard et espuma de potiron</h2>
                                 <p>Mariné aux zestes d'orange</p>
                             </div>
                             <div class="prix">20€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="valid">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
-                    <a href="#" class="bloc-link2">
+
                         <div class="choix4">
                             <div class="text">
                                 <h2>Foie gras de canard cuit entier</h2>
                                 <p>Confiture de figue et pain toasté</p>
                             </div>
                             <div class="prix">35€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="valide">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
+                    </div>
                 </div>
-        </div>
-        </section>
+            </section>
 
-        <section>
-            <div class="plats">
-                <p style="margin-bottom: 10px
+            <section>
+                <div class="plats">
+                    <p style="margin-bottom: 10px
                 ;">PLATS</p>
-                <div class="line"></div>
-                <a href="#" class="bloc-link">
+                    <div class="line"></div>
                     <div class="choise">
                         <div class="choix">
                             <div class="text">
@@ -107,88 +116,93 @@
                                 <p>Sur lit de purée de céleri-rave</p>
                             </div>
                             <div class="prix">40€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="valide">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                </a>
-                <a href="#" class="bloc-link">
-                    <div class="choix2">
-                        <div class="text">
-                            <h2>Langoustine poêlée</h2>
-                            <p>Purée de patate douce</p>
-                        </div>
-                        <div class="prix">35€</div>
-                    </div>
-                    <div class="valide">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </a>
-                <a href="#" class="bloc-link">
-                    <div class="choix3">
-                        <div class="text">
-                            <h2>Mijoté de queue de boeuf</h2>
-                            <p>Et riz sauvage aux zestes de citron</p>
-                        </div>
-                        <div class="prix">44€</div>
-                    </div>
-                    <div class="valid">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </a>
-            </div>
-    </div>
-    </section>
 
-    <section>
-        <div class="desserts">
-            <p style="margin-bottom: 10px
-            ;">DESSERTS</p>
-            <div class="line"></div>
-            <a href="#" class="bloc-link">
-                <div class="choise">
-                    <div class="choix">
-                        <div class="text">
-                            <h2>Macaron de noisette et chocolat</h2>
-                            <p>Glace au caramel brun et sel de Guérande</p>
+                        <div class="choix2">
+                            <div class="text">
+                                <h2>Langoustine poêlée</h2>
+                                <p>Purée de patate douce</p>
+                            </div>
+                            <div class="prix">35€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="prix">18€</div>
+
+                        <div class="choix3">
+                            <div class="text">
+                                <h2>Mijoté de queue de boeuf</h2>
+                                <p>Et riz sauvage aux zestes de citron</p>
+                            </div>
+                            <div class="prix">44€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="valide">
-                        <i class="fas fa-check-circle"></i>
+                </div>
+            </section>
+
+            <section>
+                <div class="desserts">
+                    <p style="margin-bottom: 10px
+            ;">DESSERTS</p>
+                    <div class="line"></div>
+                    <div class="choise">
+                        <div class="choix">
+                            <div class="text">
+                                <h2>Macaron de noisette et chocolat</h2>
+                                <p>Glace au caramel brun et sel de Guérande</p>
+                            </div>
+                            <div class="prix">18€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="choix2">
+                            <div class="text">
+                                <h2>Baba au rhum revisité</h2>
+                                <p>Avec son coulis de citron</p>
+                            </div>
+                            <div class="prix">22€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="choix3">
+                            <div class="text">
+                                <h2>Tarte au citron meringuée</h2>
+                                <p>Déstructurée</p>
+                            </div>
+                            <div class="prix">23€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-            </a>
-            <a href="#" class="bloc-link">
-                <div class="choix2">
-                    <div class="text">
-                        <h2>Baba au rhum revisité</h2>
-                        <p>Avec son coulis de citron</p>
-                    </div>
-                    <div class="prix">22€</div>
                 </div>
-                <div class="valide">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </a>
-            <a href="#" class="bloc-link">
-                <div class="choix3">
-                    <div class="text">
-                        <h2>Tarte au citron meringuée</h2>
-                        <p>Déstructurée</p>
-                    </div>
-                    <div class="prix">23€</div>
-                </div>
-                <div class="valide">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </a>
+            </section>
+            <div class="commander">
+                <button class="button" style="width:270px;height:50px;font-size: 1.1em;">Commander</button>
+            </div>
         </div>
-        </div>
-    </section>
-    <div class="commander">
-        <button class="button" style="width:270px;height:50px;font-size: 1.1em;">Commander</button>
-    </div>
-    </div>
     </div>
     <footer>
         <div class="logo2">
