--- a/delice.html
+++ b/delice.html
@@ -8,6 +8,9 @@
     <title>Délice des sens</title>
     <link rel="stylesheet" href="css/style2.css">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3f6c1d8c3a.js" crossorigin="anonymous"></script>
 </head>
 
@@ -34,7 +37,9 @@
                     <h1>Le délice des sens</h1>
                     <div class="heart">
                         <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
+                        <div class="fullheart">
+                            <i class="fas fa-heart"></i>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -43,53 +48,61 @@
                     <p style="margin-bottom: 10px
                     ;">ENTRÉES</p>
                     <div class="line"></div>
-                    <a href="#" class="bloc-link">
-                        <div class="choise">
-                            <div class="choix">
-                                <div class="text">
-                                    <h2>Tartare de thon</h2>
-                                    <p>Assaisonné au yuzu</p>
-                                </div>
-                                <div class="prix">25€</div>
+
+                    <div class="choise">
+                        <div class="choix">
+                            <div class="text">
+                                <h2>Tartare de thon</h2>
+                                <p>Assaisonné au yuzu</p>
                             </div>
+                            <div class="prix">25€</div>
                             <div class="valide">
-                                <i class="fas fa-check-circle"></i>
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
                             </div>
-                    </a>
-                    <a href="#" class="bloc-link">
+                        </div>
+
+
+
                         <div class="choix2">
                             <div class="text">
                                 <h2>Bouchée de homard croustillant</h2>
                                 <p>Et sa farandole de petits légumes</p>
                             </div>
                             <div class="prix">35€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="valide">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
-                    <a href="#" class="bloc-link">
+
+
                         <div class="choix3">
                             <div class="text">
                                 <h2>Velouté de cèpes</h2>
                                 <p>Aux truffes</p>
                             </div>
                             <div class="prix">20€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="valide">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
-                </div>
-        </div>
-        </section>
 
-        <section>
-            <div class="plats">
-                <p style="margin-bottom: 10px
+
+                    </div>
+                </div>
+            </section>
+
+            <section>
+                <div class="plats">
+                    <p style="margin-bottom: 10px
                 ;">PLATS</p>
-                <div class="line"></div>
-                <a href="#" class="bloc-link">
+                    <div class="line"></div>
+
                     <div class="choise">
                         <div class="choix">
                             <div class="text">
@@ -97,88 +110,102 @@
                                 <p>Et sa crème de truffe</p>
                             </div>
                             <div class="prix">40€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="valide">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                </a>
-                <a href="#" class="bloc-link">
-                    <div class="choix2">
-                        <div class="text">
-                            <h2>Langouste rôtie</h2>
-                            <p>Et ses légumes de saison</p>
-                        </div>
-                        <div class="prix">35€</div>
-                    </div>
-                    <div class="valide">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </a>
-                <a href="#" class="bloc-link">
-                    <div class="choix3">
-                        <div class="text">
-                            <h2>Côte de boeuf Angus</h2>
-                            <p>Et sa purée de panais</p>
-                        </div>
-                        <div class="prix">44€</div>
-                    </div>
-                    <div class="valide">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </a>
-            </div>
-    </div>
-    </section>
 
-    <section>
-        <div class="desserts">
-            <p style="margin-bottom: 10px
-            ;">DESSERTS</p>
-            <div class="line"></div>
-            <a href="#" class="bloc-link">
-                <div class="choise">
-                    <div class="choix">
-                        <div class="text">
-                            <h2>Farandole de desserts</h2>
-                            <p>Du chef</p>
+
+                        <div class="choix2">
+                            <div class="text">
+                                <h2>Langouste rôtie</h2>
+                                <p>Et ses légumes de saison</p>
+                            </div>
+                            <div class="prix">35€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="prix">18€</div>
+
+
+                        <div class="choix3">
+                            <div class="text">
+                                <h2>Côte de boeuf Angus</h2>
+                                <p>Et sa purée de panais</p>
+                            </div>
+                            <div class="prix">44€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
+                        </div>
+
+
                     </div>
-                    <div class="valide">
-                        <i class="fas fa-check-circle"></i>
+                </div>
+            </section>
+
+            <section>
+                <div class="desserts">
+                    <p style="margin-bottom: 10px
+            ;">DESSERTS</p>
+                    <div class="line"></div>
+
+                    <div class="choise">
+                        <div class="choix">
+                            <div class="text">
+                                <h2>Farandole de desserts</h2>
+                                <p>Du chef</p>
+                            </div>
+                            <div class="prix">18€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="choix2">
+                            <div class="text">
+                                <h2>Crème brulée</h2>
+                                <p>Revisitée</p>
+                            </div>
+                            <div class="prix">22€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="choix3">
+                            <div class="text">
+                                <h2>Tiramisu</h2>
+                                <p>À la noisette</p>
+                            </div>
+                            <div class="prix">23€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
+                        </div>
+
+
                     </div>
-            </a>
-            <a href="#" class="bloc-link">
-                <div class="choix2">
-                    <div class="text">
-                        <h2>Crème brulée</h2>
-                        <p>Revisitée</p>
-                    </div>
-                    <div class="prix">22€</div>
                 </div>
-                <div class="valide">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </a>
-            <a href="#" class="bloc-link">
-                <div class="choix3">
-                    <div class="text">
-                        <h2>Tiramisu</h2>
-                        <p>À la noisette</p>
-                    </div>
-                    <div class="prix">23€</div>
-                </div>
-                <div class="valide">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </a>
+            </section>
+            <div class="commander">
+                <button class="button" style="width:270px;height:50px;font-size: 1.1em;">Commander</button>
+            </div>
         </div>
-        </div>
-    </section>
-    <div class="commander">
-        <button class="button" style="width:270px;height:50px;font-size: 1.1em;">Commander</button>
-    </div>
-    </div>
     </div>
     <footer>
         <div class="logo2">
