--- a/francaise.html
+++ b/francaise.html
@@ -8,6 +8,9 @@
     <title>A la francaise</title>
     <link rel="stylesheet" href="css/style2.css">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3f6c1d8c3a.js" crossorigin="anonymous"></script>
 </head>
 
@@ -34,7 +37,9 @@
                     <h1>À la française</h1>
                     <div class="heart">
                         <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
+                        <div class="fullheart">
+                            <i class="fas fa-heart"></i>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -43,53 +48,57 @@
                     <p style="margin-bottom: 10px
                     ;">ENTRÉES</p>
                     <div class="line"></div>
-                    <a href="#" class="bloc-link">
-                        <div class="choise">
-                            <div class="choix">
-                                <div class="text">
-                                    <h2>Tartare de poulpe acidulé</h2>
-                                    <p>Aux zestes d'orange</p>
-                                </div>
-                                <div class="prix">25€</div>
+                    <div class="choise">
+                        <div class="choix">
+                            <div class="text">
+                                <h2>Tartare de poulpe acidulé</h2>
+                                <p>Aux zestes d'orange</p>
                             </div>
+                            <div class="prix">25€</div>
                             <div class="valide">
-                                <i class="fas fa-check-circle"></i>
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
                             </div>
-                    </a>
-                    <a href="#" class="bloc-link">
+                        </div>
+
+
                         <div class="choix2">
                             <div class="text">
                                 <h2>Velouté de légumes d'antan</h2>
                                 <p>Carotte, panais, topinambour</p>
                             </div>
                             <div class="prix">35€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="valide">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
-                    <a href="#" class="bloc-link">
+
+
                         <div class="choix3">
                             <div class="text">
                                 <h2>Soupe à l'oignon</h2>
                                 <p>Revisitée</p>
                             </div>
                             <div class="prix">20€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="valide">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
-                </div>
-        </div>
-        </section>
 
-        <section>
-            <div class="plats">
-                <p style="margin-bottom: 10px
+                    </div>
+                </div>
+            </section>
+
+            <section>
+                <div class="plats">
+                    <p style="margin-bottom: 10px
                 ;">PLATS</p>
-                <div class="line"></div>
-                <a href="#" class="bloc-link">
+                    <div class="line"></div>
                     <div class="choise">
                         <div class="choix">
                             <div class="text">
@@ -97,88 +106,100 @@
                                 <p>Accompagnées d'une purée de panais</p>
                             </div>
                             <div class="prix">40€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="valide">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                </a>
-                <a href="#" class="bloc-link">
-                    <div class="choix2">
-                        <div class="text">
-                            <h2>Magret de canard</h2>
-                            <p>Et parmentier de pommes de terre</p>
-                        </div>
-                        <div class="prix">35€</div>
-                    </div>
-                    <div class="valide">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </a>
-                <a href="#" class="bloc-link">
-                    <div class="choix3">
-                        <div class="text">
-                            <h2>Pigeonneau d’Ille-et-Vilaine</h2>
-                            <p>Sur son lit de gnocchis aux légumes</p>
-                        </div>
-                        <div class="prix">44€</div>
-                    </div>
-                    <div class="valide">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </a>
-            </div>
-    </div>
-    </section>
 
-    <section>
-        <div class="desserts">
-            <p style="margin-bottom: 10px
-            ;">DESSERTS</p>
-            <div class="line"></div>
-            <a href="#" class="bloc-link">
-                <div class="choise">
-                    <div class="choix">
-                        <div class="text">
-                            <h2>Pétales de violettes glacés</h2>
-                            <p>Et purée de noisettes</p>
+
+                        <div class="choix2">
+                            <div class="text">
+                                <h2>Magret de canard</h2>
+                                <p>Et parmentier de pommes de terre</p>
+                            </div>
+                            <div class="prix">35€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="prix">18€</div>
+
+
+                        <div class="choix3">
+                            <div class="text">
+                                <h2>Pigeonneau d’Ille-et-Vilaine</h2>
+                                <p>Sur son lit de gnocchis aux légumes</p>
+                            </div>
+                            <div class="prix">44€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
-                    <div class="valide">
-                        <i class="fas fa-check-circle"></i>
+                </div>
+            </section>
+
+            <section>
+                <div class="desserts">
+                    <p style="margin-bottom: 10px
+            ;">DESSERTS</p>
+                    <div class="line"></div>
+                    <div class="choise">
+                        <div class="choix">
+                            <div class="text">
+                                <h2>Pétales de violettes glacés</h2>
+                                <p>Et purée de noisettes</p>
+                            </div>
+                            <div class="prix">18€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="choix2">
+                            <div class="text">
+                                <h2>Fondant au chocolat</h2>
+                                <p>Revisité</p>
+                            </div>
+                            <div class="prix">22€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="choix3">
+                            <div class="text">
+                                <h2>Millefeuille croustillant</h2>
+                                <p>Myrtilles et pâte d’amande</p>
+                            </div>
+                            <div class="prix">23€</div>
+                            <div class="valide">
+                                <div class="rotation">
+                                    <i class="valide_icone fas fa-check-circle"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        </a>
                     </div>
-            </a>
-            <a href="#" class="bloc-link">
-                <div class="choix2">
-                    <div class="text">
-                        <h2>Fondant au chocolat</h2>
-                        <p>Revisité</p>
-                    </div>
-                    <div class="prix">22€</div>
                 </div>
-                <div class="valide">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </a>
-            <a href="#" class="bloc-link">
-                <div class="choix3">
-                    <div class="text">
-                        <h2>Millefeuille croustillant</h2>
-                        <p>Myrtilles et pâte d’amande</p>
-                    </div>
-                    <div class="prix">23€</div>
-                </div>
-                <div class="valide">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </a>
+            </section>
+            <div class="commander">
+                <button class="button" style="width:270px;height:50px;font-size: 1.1em;">Commander</button>
+            </div>
         </div>
-        </div>
-    </section>
-    <div class="commander">
-        <button class="button" style="width:270px;height:50px;font-size: 1.1em;">Commander</button>
-    </div>
-    </div>
     </div>
     <footer>
         <div class="logo2">
