--- a/francaise.html
+++ b/francaise.html
@@ -22,7 +22,7 @@
                 <i class="fas fa-arrow-left"></i>
             </a>
             <div class="logo">
-                <img src="images/logo/ohmyfood.png" alt="logo" style="width: 300px;">
+                <img src="images/logo/ohmyfood.png" alt="logo">
             </div>
         </div>
         <!--top-->
