--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!--header-->
     <header>
         <div class="logo">
-            <img src="images/logo/ohmyfood.png" alt="logo" style="width: 300px;">
+            <img src="images/logo/ohmyfood.png" alt="logo">
         </div>
         <!--Partie localisation-->
         <div class="localisation">
@@ -41,7 +41,7 @@
                 <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
             </section>
             <!--boutton-->
-            <button class="button" style="width:270px;height:50px;font-size: 1.1em;">Explorer nos restaurants</button>
+            <button class="button">Explorer nos restaurants</button>
         </div>
         <h2>Fonctionnement</h2>
         <nav>
@@ -72,11 +72,11 @@
                 <h2>Restaurants</h2>
                 <div class="resto">
                     <figure>
-                        <a href="palette.html" class="bloc-link">
+                        <a href="/html/palette.html" class="bloc-link">
                             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="menilmontant">
                         </a>
                         <figcaption>
-                            <a href="palette.html" class="bloc-link">
+                            <a href="/html/palette.html" class="bloc-link">
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </a>
@@ -92,11 +92,11 @@
 
 
                     <figure>
-                        <a href="note.html" class="bloc-link">
+                        <a href="/html/note.html" class="bloc-link">
                             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="charonne">
                         </a>
                         <figcaption>
-                            <a href="note.html" class="bloc-link">
+                            <a href="/html/note.html" class="bloc-link">
                                 <h3>La note enchantée</h3>
                                 <p>Charonne</p>
                             </a>
@@ -113,11 +113,11 @@
 
 
                     <figure>
-                        <a href="francaise.html" class="bloc-link">
+                        <a href="/html/francaise.html" class="bloc-link">
                             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="cite">
                         </a>
                         <figcaption>
-                            <a href="francaise.html" class="bloc-link">
+                            <a href="/html/francaise.html" class="bloc-link">
                                 <h3>A la française</h3>
                                 <p>Cité Rouge</p>
                             </a>
@@ -131,12 +131,12 @@
                     </figure>
 
                     <figure>
-                        <a href="delice.html" class="bloc-link">
+                        <a href="/html/delice.html" class="bloc-link">
                             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                                 alt="folie">
                         </a>
                         <figcaption>
-                            <a href="delice.html" class="bloc-link">
+                            <a href="/html/delice.html" class="bloc-link">
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
                             </a>
