--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                 <h2>Restaurants</h2>
                 <div class="resto">
                     <figure>
-                        <a href="/html/palette.html" class="bloc-link">
+                        <a href="html/palette.html" class="bloc-link">
                             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="menilmontant">
                         </a>
                         <figcaption>
-                            <a href="/html/palette.html" class="bloc-link">
+                            <a href="html/palette.html" class="bloc-link">
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </a>
@@ -92,11 +92,11 @@
 
 
                     <figure>
-                        <a href="/html/note.html" class="bloc-link">
+                        <a href="html/note.html" class="bloc-link">
                             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="charonne">
                         </a>
                         <figcaption>
-                            <a href="/html/note.html" class="bloc-link">
+                            <a href="html/note.html" class="bloc-link">
                                 <h3>La note enchantée</h3>
                                 <p>Charonne</p>
                             </a>
@@ -113,11 +113,11 @@
 
 
                     <figure>
-                        <a href="/html/francaise.html" class="bloc-link">
+                        <a href="html/francaise.html" class="bloc-link">
                             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="cite">
                         </a>
                         <figcaption>
-                            <a href="/html/francaise.html" class="bloc-link">
+                            <a href="html/francaise.html" class="bloc-link">
                                 <h3>A la française</h3>
                                 <p>Cité Rouge</p>
                             </a>
@@ -131,12 +131,12 @@
                     </figure>
 
                     <figure>
-                        <a href="/html/delice.html" class="bloc-link">
+                        <a href="html/delice.html" class="bloc-link">
                             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                                 alt="folie">
                         </a>
                         <figcaption>
-                            <a href="/html/delice.html" class="bloc-link">
+                            <a href="html/delice.html" class="bloc-link">
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
                             </a>
