--- a/html/francaise.html
+++ b/html/francaise.html
@@ -45,8 +45,7 @@
             </section>
             <section>
                 <div class="entrees">
-                    <p style="margin-bottom: 10px
-                    ;">ENTRÉES</p>
+                    <p>ENTRÉES</p>
                     <div class="line"></div>
                     <div class="choise">
                         <div class="choix">
@@ -96,8 +95,7 @@
 
             <section>
                 <div class="plats">
-                    <p style="margin-bottom: 10px
-                ;">PLATS</p>
+                    <p>PLATS</p>
                     <div class="line"></div>
                     <div class="choise">
                         <div class="choix">
@@ -147,8 +145,7 @@
 
             <section>
                 <div class="desserts">
-                    <p style="margin-bottom: 10px
-            ;">DESSERTS</p>
+                    <p>DESSERTS</p>
                     <div class="line"></div>
                     <div class="choise">
                         <div class="choix">
