--- a/html/delice.html
+++ b/html/delice.html
@@ -46,8 +46,7 @@
             </section>
             <section>
                 <div class="entrees">
-                    <p style="margin-bottom: 10px
-                    ;">ENTRÉES</p>
+                    <p>ENTRÉES</p>
                     <div class="line"></div>
 
                     <div class="choise">
@@ -100,8 +99,7 @@
 
             <section>
                 <div class="plats">
-                    <p style="margin-bottom: 10px
-                ;">PLATS</p>
+                    <p>PLATS</p>
                     <div class="line"></div>
 
                     <div class="choise">
@@ -153,8 +151,7 @@
 
             <section>
                 <div class="desserts">
-                    <p style="margin-bottom: 10px
-            ;">DESSERTS</p>
+                    <p>DESSERTS</p>
                     <div class="line"></div>
 
                     <div class="choise">
