--- a/html/note.html
+++ b/html/note.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <!--top-->
-        <div class="top">
+        <div class="top2">
             <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="menilmontant">
         </div>
     </header>
